website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.6.3/swizzling.mdx
---
description: Customize your site's appearance through creating your own theme components
---

# 组件替换（Swizzling）

本节将介绍如何在 Docusaurus 中实现布局定制。

> 似曾相识...？

本节内容与[样式与布局](./styling-layout.mdx)类似，但这次我们将直接定制 React 组件本身，而非仅修改其外观样式。我们将讨论 Docusaurus 的核心概念：**组件替换（swizzling）**，该功能支持**更深层次的站点定制**。

实际操作中，组件替换允许您通过两种模式**用自定义实现替换主题组件**：

- [**完全替换（Ejecting）**](#ejecting)：创建原始主题组件的**副本**，可进行**完全自定义**
- [**包装扩展（Wrapping）**](#wrapping)：创建原始主题组件的**包装器**，可进行**功能增强**

<details>

<summary>Why is it called swizzling?</summary>

**The name comes from Objective-C and Swift-UI**: [method swizzling](https://pspdfkit.com/blog/2019/swizzling-in-swift/) is the process of changing the implementation of an existing selector (method).

**For Docusaurus, component swizzling means providing an alternative component that takes precedence over the component provided by the theme.**

You can think of it as [Monkey Patching](https://en.wikipedia.org/wiki/Monkey_patch) for React components, enabling you to override the default implementation. Gatsby has a similar concept called [theme shadowing](https://www.gatsbyjs.com/docs/how-to/plugins-and-themes/shadowing/).

To gain a deeper understanding of this, you have to understand [how theme components are resolved](./advanced/client.mdx#theme-aliases).

</details>

## 组件替换流程

### 概述

Docusaurus 提供了便捷的**交互式 CLI** 来替换组件，通常只需记住以下命令：

```bash npm2yarn
npm run swizzle
```

该命令会在您的 `src/theme` 目录下生成新组件，生成文件示例如下：

<Tabs>
<TabItem value="Ejecting">

```jsx title="src/theme/SomeComponent.js"
import React from 'react';

export default function SomeComponent(props) {
  // You can fully customize this implementation
  // including changing the JSX, CSS and React hooks
  return (
    <div className="some-class">
      <h1>Some Component</h1>
      <p>Some component implementation details</p>
    </div>
  );
}
```

</TabItem>
<TabItem value="Wrapping">

```jsx title="src/theme/SomeComponent.js"
import React from 'react';
import SomeComponent from '@theme-original/SomeComponent';

export default function SomeComponentWrapper(props) {
  // You can enhance the original component,
  // including adding extra props or JSX elements around it
  return (
    <>
      <SomeComponent {...props} />
    </>
  );
}
```

</TabItem>
</Tabs>

要查看所有可替换的主题和组件概览，请运行：

```bash npm2yarn
npm run swizzle -- --list
```

使用 `--help` 查看所有可用 CLI 选项，或参考 [swizzle CLI 文档](./cli.mdx#docusaurus-swizzle)。

:::note

完成组件替换后，**请重启开发服务器**以使 Docusaurus 识别新组件。

:::

:::warning[建议优先选择安全方案]

请务必了解[哪些组件可以安全替换](#what-is-safe-to-swizzle)。某些组件是主题的**内部实现细节**。

:::

:::info

`docusaurus swizzle` 仅是自动化辅助工具。您也可以手动创建 `src/theme/SomeComponent.js` 文件，Docusaurus 会[自动解析](./advanced/client.mdx#theme-aliases)。该命令背后并无特殊魔法！

:::

### 完全替换 {#ejecting}

完全替换主题组件是指**创建原始组件的副本**，您可对该副本进行**全面定制和重写**。

要完全替换主题组件，可使用交互式 swizzle CLI 或添加 `--eject` 选项：

```bash npm2yarn
npm run swizzle [theme name] [component name] -- --eject
```

示例：

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic Footer -- --eject
```

此操作会将当前 `<Footer />` 组件的实现代码复制到您站点的 `src/theme` 目录。此后 Docusaurus 将使用该副本而非原始组件。您现在可以完全重新实现 `<Footer>` 组件。

```jsx title="src/theme/Footer/index.js"
import React from 'react';

export default function Footer(props) {
  return (
    <footer>
      <h1>This is my custom site footer</h1>
      <p>And it is very different from the original</p>
    </footer>
  );
}
```

:::warning

替换[**非安全**](#what-is-safe-to-swizzle)组件可能导致复制大量内部代码，这些代码需要您自行维护。当组件接收的 props 或使用的内部主题 API 发生变化时，可能增加 Docusaurus 升级的难度。

**请优先考虑[包装扩展](#wrapping)方案**：需要维护的代码量更少。

:::

:::tip[重新替换]

Docusaurus 升级后，可通过重新运行替换命令并使用 `git diff` 比对变更来保持组件更新。建议在文件顶部添加简要注释说明您的修改内容，以便在重新替换后更轻松地重新应用更改。

:::

### 包装组件 {#wrapping}

包装主题组件是指**创建一个包裹层**来封装原始主题组件，从而对其进行**功能增强**。

要包装主题组件，可通过交互式swizzle CLI或使用`--wrap`选项实现：

```bash npm2yarn
npm run swizzle [theme name] [component name] -- --wrap
```

示例：

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic Footer -- --wrap
```

这将在站点的`src/theme`目录创建包装组件。Docusaurus将使用`<FooterWrapper>`组件替代原始组件，您可以在原始组件周围添加自定义内容。

```jsx title="src/theme/Footer/index.js"
import React from 'react';
import Footer from '@theme-original/Footer';

export default function FooterWrapper(props) {
  return (
    <>
      <section>
        <h2>Extra section</h2>
        <p>This is an extra section that appears above the original footer</p>
      </section>
      <Footer {...props} />
    </>
  );
}
```

<details>
  <summary>What is this <code>@theme-original</code> thing?</summary>

Docusaurus uses [theme aliases](./advanced/client.mdx#theme-aliases) to resolve the theme components to use. The newly created wrapper takes the `@theme/SomeComponent` alias. `@theme-original/SomeComponent` permits to import original component that the wrapper shadows without creating an infinite import loop where the wrapper imports itself.

</details>

:::tip

包装主题是**在不[弹出组件](#ejecting)的情况下扩展现有功能**的理想方式。例如，您可以轻松在每篇博客文章下方添加自定义评论系统：

```jsx title="src/theme/BlogPostItem.js"
import React from 'react';
import BlogPostItem from '@theme-original/BlogPostItem';
import MyCustomCommentSystem from '@site/src/MyCustomCommentSystem';

export default function BlogPostItemWrapper(props) {
  return (
    <>
      <BlogPostItem {...props} />
      <MyCustomCommentSystem />
    </>
  );
}
```

:::

## 哪些组件可以安全替换？ {#what-is-safe-to-swizzle}

> 能力越大，责任越大

部分主题组件属于主题的**内部实现细节**。虽然Docusaurus允许替换这些组件，但**可能存在风险**。

<details>

<summary>Why is it risky?</summary>

Theme authors (including us) might have to update their theme over time: changing the component props, name, file system location, types... For example, consider a component that receives two props `name` and `age`, but after a refactor, it now receives a `person` prop with the above two properties. Your component, which still expects these two props, will render `undefined` instead.

Moreover, internal components may simply disappear. If a component is called `Sidebar` and it's later renamed to `DocSidebar`, your swizzled component will be completely ignored.

**Theme components marked as unsafe may change in a backward-incompatible way between theme minor versions.** When upgrading a theme (or Docusaurus), your customizations might **behave unexpectedly**, and can even **break your site**.

</details>

对于每个主题组件，swizzle CLI会显示主题作者声明的**三个安全等级**：

- **安全**：该组件可安全替换，其公共API被视为稳定，在主题**主版本**内不会发生破坏性变更
- **不安全**：该组件是主题实现细节，替换不安全，在主题**次版本**升级时可能发生破坏性变更
- **禁止**：swizzle CLI将阻止替换该组件，因其设计初衷就不支持替换

:::note

某些组件可能支持安全包装，但不支持安全弹出。

:::

:::info

不必**过度担忧替换不安全组件**：只需注意**破坏性变更**可能发生，在次版本升级时可能需要手动调整定制内容。

:::

:::note[提交您的用例]

如果您有**必须替换不安全组件的强烈需求**，请[**在此提交报告**](https://github.com/facebook/docusaurus/discussions/5468)，我们将共同寻找使其安全的解决方案。

:::

## 应该替换哪个组件？ {#which-component-should-i-swizzle}

有时很难准确判断应该替换哪个组件才能实现预期效果。提供大多数主题组件的`@docusaurus/theme-classic`包含约[100个组件](https://github.com/facebook/docusaurus/tree/main/packages/docusaurus-theme-classic/src/theme)！

:::tip

要查看`@docusaurus/theme-classic`所有组件的概览：

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic -- --list
```

:::

您可以通过以下步骤定位需要替换的组件：

1. **组件描述**。部分组件会提供简短描述，这是快速定位目标组件的有效方式。
2. **组件命名**。官方主题组件采用语义化命名，通常可通过名称推断功能。交互式swizzle CLI支持输入组件名片段进行筛选。例如执行`yarn swizzle @docusaurus/theme-classic`后输入`Doc`，将仅列出文档相关组件。
3. **从高层级组件入手**。组件以树状结构相互引用，每个路由会关联一个顶级渲染组件（多数列于[内容插件路由](./advanced/routing.mdx#routing-in-content-plugins)）。例如所有博客文章页都以`@theme/BlogPostPage`为根组件。可先swizzle该组件，再沿组件树向下定位目标元素。定位后请删除其他无关组件文件以避免维护负担。
4. **查阅[主题源码](https://github.com/facebook/docusaurus/tree/main/packages/docusaurus-theme-classic/src/theme)**并善用搜索功能。

:::tip[直接提问！]

若仍无法确定应swizzle哪个组件，可通过[支持渠道](/community/support)寻求帮助。

我们也希望了解您的定制化需求，欢迎[提交用例讨论](https://github.com/facebook/docusaurus/discussions/5468)。

:::

## 是否必须swizzle？{#do-i-need-to-swizzle}

Swizzle意味着需要维护与Docusaurus内部API交互的React代码。建议优先考虑以下替代方案：

1. **使用CSS**。CSS规则和选择器通常可实现基础定制，详见[样式与布局](./styling-layout.mdx)。
2. **利用国际化机制**。国际化本质上是文本标签的定制方案。例如站点默认语言为`en`时，仍可执行`yarn write-translations -l en`后编辑生成的`code.json`文件，参考[i18n教程](./i18n/i18n-tutorial.mdx)。

:::tip

**粒度越小越好**。必须swizzle时，建议仅修改必要部分以减少维护成本。小型组件的swizzle在版本升级时更不易产生**破坏性变更**。

相比[完全替换(ejecting)](#ejecting)，[包装组件(wrapping)](#wrapping)是更安全的选择。

:::

## 使用`<Root>`包装站点{#wrapper-your-site-with-root}

`<Root>`组件位于React树最顶层（高于主题`<Layout>`）且**永不卸载**，适合放置需在页面导航间保持的状态逻辑（如用户认证状态、购物车状态等）。

通过创建`src/theme/Root.js`文件手动swizzle：

```js title="src/theme/Root.js"
import React from 'react';

// Default implementation, that you can customize
export default function Root({children}) {
  return <>{children}</>;
}
```

:::tip

可在此组件中渲染React Context提供者。

:::